<resources>
    <string name="app_name">Task 10.5</string>
    <string name="enter_code">Введите код</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_0">0</string>
    <string name="clear"><![CDATA[<]]></string>
    <string name="OK">OK</string>
    <string name="correctCode">Code is correct!</string>
    <string name="azat_serzhan">Azat Serzhanov\nazatserzhan@gmail.com</string>
    <string name="share_text">Поделиться</string>
    <string name="send_by_mail">Отправить по почте</string>
    <string name="call">Позвонить</string>
    <string name="launch_cam">Запустить камеру</string>
</resources>