<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/edit_code_tv"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="47dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="9sp"
        android:text="@string/enter_code"
        android:textAppearance="@style/enter_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pin_code"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="47dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="9sp"
        android:maxLength="4"
        android:textAppearance="@style/enter_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_1"
        style="@style/button_rectangle_style"
        android:layout_marginStart="73dp"
        android:layout_marginTop="289dp"
        android:background="@drawable/click_selector"
        android:text="@string/text_1"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_2"
        style="@style/button_rectangle_style"
        android:layout_alignParentTop="true"
        android:layout_marginStart="174dp"
        android:layout_marginTop="289dp"
        android:background="@drawable/click_selector"
        android:text="@string/text_2"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_3"
        style="@style/button_rectangle_style"
        android:layout_marginStart="275dp"
        android:layout_marginTop="289dp"
        android:background="@drawable/click_selector"
        android:text="@string/text_3"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_4"
        style="@style/button_rectangle_style"
        android:layout_marginStart="73dp"
        android:layout_marginTop="361dp"
        android:background="@drawable/click_selector"
        android:text="@string/text_4"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_5"
        style="@style/button_rectangle_style"
        android:layout_marginStart="174dp"
        android:layout_marginTop="361dp"
        android:background="@drawable/click_selector"
        android:text="@string/text_5"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_6"
        style="@style/button_rectangle_style"
        android:layout_marginStart="275dp"
        android:layout_marginTop="361dp"
        android:background="@drawable/click_selector"
        android:text="@string/text_6"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_7"
        style="@style/button_rectangle_style"
        android:layout_marginStart="73dp"
        android:layout_marginTop="433dp"
        android:background="@drawable/click_selector"
        android:text="@string/text_7"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_8"
        style="@style/button_rectangle_style"
        android:layout_marginStart="174dp"
        android:layout_marginTop="433dp"
        android:background="@drawable/click_selector"
        android:text="@string/text_8"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_9"
        style="@style/button_rectangle_style"
        android:layout_marginStart="275dp"
        android:layout_marginTop="433dp"
        android:background="@drawable/click_selector"
        android:text="@string/text_9"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear_button"
        style="@style/button_rectangle_style"
        android:layout_marginStart="73dp"
        android:layout_marginTop="505dp"
        android:background="@drawable/normal_rectangle"
        android:text="@string/clear"
        android:textColor="@color/blue_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_0"
        style="@style/button_rectangle_style"
        android:layout_marginStart="174dp"
        android:layout_marginTop="505dp"
        android:background="@drawable/click_selector"
        android:text="@string/text_0"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ok_button"
        style="@style/button_rectangle_style"
        android:layout_marginStart="275dp"
        android:layout_marginTop="505dp"
        android:background="@drawable/ok_button_state"
        android:text="@string/OK"
        android:textColor="@color/blue_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>